<resources>
    <string name="app_name">Lab1</string>

    <!-- Strings related to login -->
    <string name="scan">Scan</string>
    <string name="prompt_email">Enter Email</string>
    <string name="prompt_password">Enter Password </string>
    <string name="prompt_name">Enter Name</string>
    <string name="prompt_Address">Enter Address</string>
    <string name="prompt_State">Enter State</string>
    <string name="prompt_city">Enter city</string>
    <string name="prompt_confirmpass">confirmation password</string>
    <string name="prompt_phone_number">Phone Number</string>
    <string name="prompt_EnterEmail">Enter Email Address</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_maps">Map</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">settings</string>
    <string name="title_activity_home1">HomeActivity1</string>
</resources>
